# looloomi-ai

./: .gitignore  .mcp.json  ATTACK_PLAN.md  CIS_METHODOLOGY.md  CLAUDE.md  COMMIT_READY.md  DEBUG_TODO.md  DECISIONS.md  EXCLUSION_LIST.md  HARNESS_UPGRADE.md  INCLUSION_STANDARD.md  JAZZ_TODAY.md  MINIMAX_SYNC.md  MULTI_AGENT_PROTOCOL.md  PROJECT_STATUS.md  Procfile  README.md  ROADMAP_A2A.md  SYSTEM_PROMPT.md  UI_UX_REVIEW.md  WEEKLY_REVIEW.md  export_backtest_to_supabase.py  glama.json  mmi_index_v2.py  nixpacks.toml  price_fetcher.py  requirements.txt  run_reconstruction.command  social_sentiment.py
.claude/: settings.json
.claude-plugin/: plugin.json
.well-known/: agent.json
backend/: cis_cache.py  macro_events_scraper.py
config/: settings.py
dashboard/: agent.html  analytics.html  app.html  index.html  market.html  package-lock.json  package.json  portfolio.html  quant.html  share.html  strategy.html  vision.html  vite.config.js
docs/: MINIMAX_SYNC.md  PROGRESS_2026-03-21.md  SECURITY_MODEL_RESEARCH.md  SOLANA_TOKENIZATION_RESEARCH.md
elizaos-plugin/: README.md  package-lock.json  package.json  tsconfig.json
examples/: GETTING_STARTED.md  agent_example.py  cursor-mcp.json
migrations/: 001_wallet_profiles.sql
programs/fund_factory/programs/fund_factory/: Cargo.toml
programs/fund_factory/programs/fund_factory/src/: error.rs  lib.rs  state.rs
programs/fund_factory/programs/fund_factory/src/instructions/: create_fund.rs  deposit.rs  factory.rs  mod.rs  pause.rs  redeem.rs  set_whitelist.rs  update_nav.rs
scripts/: compute_regime_fitness.py  (+7 more)
(+156 files in other folders)
